@@ -88,6 +88,8 @@ struct _MsnServConn
 
 	PurpleCircBuffer *tx_buf;
 	guint tx_handler;
+	guint timeout_sec;
+	guint timeout_handle;
 
 	void (*connect_cb)(MsnServConn *); /**< The callback to call when connecting. */
 	void (*disconnect_cb)(MsnServConn *); /**< The callback to call when disconnecting. */
@@ -177,5 +179,13 @@ void msn_servconn_got_error(MsnServConn *servconn, MsnServConnError error);
  * @param servconn The servconn.
  */
 void msn_servconn_process_data(MsnServConn *servconn);
+
+/**
+ * Set a idle timeout fot this servconn
+ *
+ * @param servconn The servconn
+ * @param seconds The idle timeout in seconds
+ */
+void msn_servconn_set_idle_timeout(MsnServConn *servconn, guint seconds);
 
 #endif /* _MSN_SERVCONN_H_ */
